# soap-over-dtls-test

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  client-main.c  server-main.c  soap-config.h
